--- a/css/login.css
+++ b/css/login.css
@@ -1,21 +1,30 @@
-*{
-    margin: 0;
-    padding: 0;
+#login{
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.6);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.4px);
+    -webkit-backdrop-filter: blur(5.4px);
+    border: 2px solid rgb(250, 231, 231);
 }
 
+.textfield{
+    background: rgba(234, 11, 11, 0);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
+    border: 1px solid rgb(26, 107, 228);
+}
 body{
+    background-color: rgb(134, 179, 182);
     background-image: url("../img/doctor-netherlands-1920x1080.png");
-    background-repeat: no-repeat;
+    background-blend-mode: multiply;
     background-size: cover;
     background-position: center;
-    margin: 0;
-    /* background-attachment: fixed; */
-    /* background-image: rgb(147, 143, 143);*/
+    overflow: hidden;
 } 
 
-
-
-/* body */
 div p{
   text-align: center;
   font-size: 4rem;
@@ -23,17 +32,17 @@ div p{
 
 .btn-primary {
     margin: 1.5rem;
-    background-color: #333;
-    border-color:#333;
+    background-color: rgb(26, 107, 228);
+    border-color:rgb(26, 107, 228);
 }
+
 .btn-primary:hover{
-    background-color: #111;
-    border-color:#111;
+    background-color: rgb(1, 70, 173);
+    border-color:rgb(1, 70, 173);
 }
 
-
-li > a:hover {
+/* li > a:hover {
     color: white;
-}
+} */
 
 
