--- a/css/doctor_hub.css
+++ b/css/doctor_hub.css
@@ -1,24 +1,18 @@
-body{
-    /* background-image: url("../img/docs.jpg"); */
-    background-color: rgb(147, 143, 143);
-}
-
-
-
-/* body */
 div p{
   text-align: center;
   font-size: 4rem;
 }
-
+body{
+    /* background-image: url("../img/docs.jpg"); */
+    background-color: rgb(163, 192, 223);
+}
 .btn-primary {
-    margin: 1.5rem;
-    background-color: #333;
-    border-color:#333;
+    background-color: rgb(34,87,191);
+    border-color:rgb(34,87,191);
 }
 .btn-primary:hover{
-    background-color: #111;
-    border-color:#111;
+    background-color: rgb(22, 56, 124);
+    border-color:rgb(34,87,191);
 }
 
 
