--- a/css/user_hub.css
+++ b/css/user_hub.css
@@ -1,9 +1,36 @@
 body{
-    /* background-image: url("../img/docs.jpg"); */
-    background-color: rgb(147, 143, 143);
+    background: rgba(214, 250, 250, 0.966);
+    background-image: url("../img/Hospital_interior.jpg");
+    background-blend-mode: multiply; 
+    background-size: cover;
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
+.doctor-profile-pic{
+    padding: 0.2rem;
+    border-radius: 1rem;
+}
 
+.navbar{
+    margin: 0.1rem;
+    border-radius: 0.5rem;
+    background: rgba(190, 225, 228, 0.6);
+    border: 1px solid rgba(39, 101, 214, 0.616);
+}
+
+.card{
+    background: rgba(190, 225, 228, 0.6);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.4px);
+    -webkit-backdrop-filter: blur(5.4px);
+    border: 1px solid rgb(26, 107, 228);
+}
 
 /* body */
 div p{
@@ -13,14 +40,13 @@ div p{
 
 .btn-primary {
     margin: 1.5rem;
-    background-color: #333;
-    border-color:#333;
+    background-color: rgb(26, 107, 228);
+    border-color:rgb(26, 107, 228);
 }
 .btn-primary:hover{
-    background-color: #111;
-    border-color:#111;
+    background-color: rgb(1, 70, 173);
+    border-color:rgb(1, 70, 173);
 }
-
 
 li > a:hover {
     color: white;
