--- a/css/user_hub.css
+++ b/css/user_hub.css
@@ -1,3 +1,4 @@
+
 body{
     background: rgba(214, 250, 250, 0.966);
     background-image: url("../img/Hospital_interior.jpg");
@@ -21,6 +22,24 @@ body{
     border-radius: 0.5rem;
     background: rgba(190, 225, 228, 0.6);
     border: 1px solid rgba(39, 101, 214, 0.616);
+}
+
+.nav-item{
+    margin-left: 1rem;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
+
+#searchbox{
+    border: 1px solid rgb(26, 107, 228);
+}
+
+.nav-item >a:hover{
+    color: #064e96;
 }
 
 .card{
@@ -51,5 +70,3 @@ div p{
 li > a:hover {
     color: white;
 }
-
-
