--- a/css/patient_profile_edit.css
+++ b/css/patient_profile_edit.css
@@ -3,11 +3,10 @@ body{
     background-image: url("../img/Hospital_interior.jpg");
     background-blend-mode: multiply; 
     background-size: cover;
-    border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -17,10 +16,9 @@ body{
 
 
 .navbar{
-    margin-top: 0.1rem;
-    border-radius: 0.5rem;
+    margin-bottom: 0.1rem;
     background: rgba(190, 225, 228, 0.6);
-    border: 1px solid rgba(39, 101, 214, 0.616);
+    border-bottom: 1px solid rgba(39, 101, 214, 0.616);
 }
 
 .nav-item{
