--- a/css/admin_hub.css
+++ b/css/admin_hub.css
@@ -29,6 +29,29 @@ div p{
     border-color:rgb(34,87,191);
 }
 
+.navbar{
+    margin-bottom: 0.1rem;
+    background: rgba(190, 225, 228, 0.6);
+    border-bottom: 1px solid rgba(39, 101, 214, 0.616);
+}
+
+.nav-item{
+    margin-left: 1rem;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
+
+#searchbox{
+    border: 1px solid rgb(26, 107, 228);
+}
+
+.nav-item >a:hover{
+    color: #064e96;
+}
 
 li > a:hover {
     color: white;
