--- a/css/doctor_hub.css
+++ b/css/doctor_hub.css
@@ -6,6 +6,27 @@ body{
     /* background-image: url("../img/docs.jpg"); */
     background-color: rgb(163, 192, 223);
 }
+
+.navbar{
+    margin-bottom: 0.1rem;
+    background: rgba(190, 225, 228, 0.6);
+    border-bottom: 1px solid rgba(39, 101, 214, 0.616);
+}
+
+.nav-item{
+    margin-left: 1rem;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
+
+.nav-item >a:hover{
+    color: #064e96;
+}
+
 .btn-primary {
     background-color: rgb(34,87,191);
     border-color:rgb(34,87,191);
@@ -14,6 +35,7 @@ body{
     background-color: rgb(22, 56, 124);
     border-color:rgb(34,87,191);
 }
+
 
 
 li > a:hover {
