--- a/css/doctor_profile_edit.css
+++ b/css/doctor_profile_edit.css
@@ -5,11 +5,24 @@ body{
     background-color: rgb(163, 192, 223);
 }
 
+.navbar{
+    margin-bottom: 0.1rem;
+    background: rgba(190, 225, 228, 0.6);
+    border-bottom: 1px solid rgba(39, 101, 214, 0.616);
+}
 
+.nav-item{
+    margin-left: 1rem;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
 
-.nav-link{
-    color: rgb(255, 255, 255);
-    background-color: rgba(34, 86, 191, 0.34) !important;
+.nav-item >a:hover{
+    color: #064e96;
 }
 
 
