--- a/css/doctor_profile_view.css
+++ b/css/doctor_profile_view.css
@@ -3,7 +3,25 @@ body{
     background-color: rgb(147, 143, 143);
 }
 
+.navbar{
+    margin-bottom: 0.1rem;
+    background: rgba(190, 225, 228, 0.6);
+    border-bottom: 1px solid rgba(39, 101, 214, 0.616);
+}
 
+.nav-item{
+    margin-left: 1rem;
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+}
+
+.nav-item >a:hover{
+    color: #064e96;
+}
 
 /* body */
 div p{
