--- a/css/doctor_hub.css
+++ b/css/doctor_hub.css
@@ -1,11 +1,25 @@
-div p{
-  text-align: center;
-  font-size: 4rem;
+html{
+    height: 100vh;
 }
+
 body{
-    /* background-image: url("../img/docs.jpg"); */
-    background-color: rgb(163, 192, 223);
+    margin: 0;
+    min-height: 100%;
+    background: rgba(150, 161, 161, 0.61);
+    background-image: url("../img/doctor_bg.jpg");
+    background-blend-mode: multiply; 
+    background-size:cover;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
+
+div p{
+    text-align: center;
+    font-size: 4rem;
+  }
 
 .navbar{
     margin-bottom: 0.1rem;
