--- a/css/doctor_profile_view.css
+++ b/css/doctor_profile_view.css
@@ -1,7 +1,20 @@
-body{
-    /* background-image: url("../img/docs.jpg"); */
-    background-color: rgb(147, 143, 143);
+html{
+    height: 100vh;
 }
+body{
+    margin: 0;
+    min-height: 100%;
+    background: rgba(214, 250, 250, 0.966);
+    background-image: url("../img/Hospital_interior.jpg");
+    background-blend-mode: multiply; 
+    background-size: cover;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 
 .navbar{
     margin-bottom: 0.1rem;
@@ -31,17 +44,12 @@ div p{
 
 .btn-primary {
     margin: 1.5rem;
-    background-color: #333;
-    border-color:#333;
+    background-color: rgb(26, 107, 228);
+    border-color:rgb(26, 107, 228);
 }
 .btn-primary:hover{
-    background-color: #111;
-    border-color:#111;
-}
-
-
-li > a:hover {
-    color: white;
+    background-color: rgb(1, 70, 173);
+    border-color:rgb(1, 70, 173);
 }
 
 
