--- a/css/admin_hub.css
+++ b/css/admin_hub.css
@@ -58,3 +58,14 @@ body{
     background-color: rgb(22, 56, 124);
     border-color:rgb(34,87,191);
 }
+
+#no_appoint {
+    margin: auto;
+    width: 450px;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 16px;
+    border: 1px solid rgba(39, 101, 214, 0.616);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(4.7px);
+    -webkit-backdrop-filter: blur(4.7px);
+}
