--- a/css/patient_appointment.css
+++ b/css/patient_appointment.css
@@ -68,3 +68,14 @@ body{
     background-color: rgb(1, 70, 173);
     border-color:rgb(1, 70, 173);
 }
+
+#no_appoint {
+    margin: auto;
+    width: 500px;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 16px;
+    border: 1px solid rgba(39, 101, 214, 0.616);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(4.7px);
+    -webkit-backdrop-filter: blur(4.7px);
+}
